raffia/tests/error/value/calc/unknown-operator.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ unknown-operator.css:1:16
  │
1 │ a {b: calc(1px % 2px)}
  │                ^


